# TGIO_APRG

./: .gitignore  CHANGELOG.md  Dockerfile  PROGRESS.md  README.md  build_client_linux.spec  build_client_windows.spec  build_server_linux.spec  docker-compose.yml  pyproject.toml  remote-ssh-desktop-server.spec  remote-ssh-desktop.spec  requirements-build.txt  requirements.txt
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: release.yml
remote_ssh_desktop/: __init__.py  __main__.py  version.py
remote_ssh_desktop/client/: main.py
remote_ssh_desktop/common/: config.py  diagnostics.py  files.py  history.py  logging_setup.py  profiles.py  protocol.py
remote_ssh_desktop/crypto/: keygen.py
remote_ssh_desktop/server/: main.py  session.py  x11.py
remote_ssh_desktop/server/backends/: __init__.py  base.py  macos.py  windows.py  x11.py
scripts/: build_client_linux.sh  build_client_macos.sh  build_client_windows.ps1  build_server_linux.sh  install.ps1  install.sh  install_client_deps.sh  install_server_deps.sh  ui_screenshot.py
scripts/arch/: PKGBUILD
tests/: run_tests.py  test_client_ui.py  test_config_and_keygen.py  test_diagnostics.py  test_e2e_proxy.py  test_e2e_ssh.py  test_history.py  test_profiles.py  test_protocol.py
